--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "mongodb database for gallery",
   "main": "app.js",
   "scripts": {
+    "start":"node app.js",
     "dev": "nodemon app.js",
     "test": "test"
   },
