--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MONGO_DB_PASSWORD = 'chandra'
 MONGO_DB_HOST = 'chandra.2tw00.mongodb.net'
 MONGO_DB_COLLECTION = 'gallery'
 SECRET_KEY = 'test'
-ALLOW_ORIGNS = ['http://localhost:4207']
+ALLOW_ORIGNS = ['http://localhost:4207','https://gallery-nine-peach.vercel.app']
